@@ -8,9 +8,9 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 3456</build>
+	<build>Build 3465</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
-	<release_date>23.10.2007 - 17:02</release_date>
+	<release_date>26.10.2007 - 01:42</release_date>
 	<toenda_copyright>2003 - 2007</toenda_copyright>
 </version>
